[package]
name = "msp"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Fast and lightweight Minecraft Server protocol client implemented in Rust."
keywords = ["minecraft", "protocol", "lightweight"]
categories = ["command-line-utilities", "game", "value-formatting"]
homepage = "https://github.com/zRains/msp"
documentation = "https://github.com/zRains/msp#readme"
repository = "https://github.com/zRains/msp"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
